--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
             </figure>
             <h1 class="animated fadeInDown delay-07s shadow">Какова цена вашего спокойствия?</h1>
             <ul class="we-create animated fadeInUp delay-1s">
-                <li>системы видеонаблюдения, которые не надо переделывать качественные очень!!!!!!!!!!!!!!!!!!! </li>
+                <li>системы видеонаблюдения, которые не надо переделывать качественные очень!! </li>
             </ul>
             <a class="link animated fadeInUp delay-1s servicelink" href="#service">начать</a>
         </div>
