--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
             <figure class="logo animated fadeInDown delay-07s">
                 <a href="#"><img src="img/logo.png" alt=""></a>
             </figure>
-            <h1 class="animated fadeInDown delay-07s shadow">Какова цена вашего спокойствия?</h1>
+            <h1 class="animated fadeInDown delay-07s shadow">Качество подоступной ценеГарантия вашего спокойствия</h1>
             <ul class="we-create animated fadeInUp delay-1s">
                 <li>системы видеонаблюдения, которые не надо переделывать качественные очень!! </li>
             </ul>
