--- a/index.html
+++ b/index.html
@@ -38,7 +38,12 @@
 
     <script src="contactform/contactform.js"></script>
 
-
+    <!-- =======================================================
+    Theme Name: Knight
+    Theme URL: https://bootstrapmade.com/knight-free-bootstrap-theme/
+    Author: BootstrapMade
+    Author URL: https://bootstrapmade.com
+    ======================================================= -->
 
 </head>
 
@@ -49,9 +54,9 @@
             <figure class="logo animated fadeInDown delay-07s">
                 <a href="#"><img src="img/logo.png" alt=""></a>
             </figure>
-            <h1 class="animated fadeInDown delay-07s shadow">Качество подоступной ценеГарантия вашего спокойствия</h1>
+            <h1 class="animated fadeInDown delay-07s shadow">Высокое качество по адекватной  цене!</h1>
             <ul class="we-create animated fadeInUp delay-1s">
-                <li>системы видеонаблюдения, которые не надо переделывать качественные очень!! </li>
+                <li>гарантия вашего спокойствия</li>
             </ul>
             <a class="link animated fadeInUp delay-1s servicelink" href="#service">начать</a>
         </div>
@@ -199,7 +204,7 @@
         <div class="portfolioContainer wow fadeInUp delay-04s">
             <div class="printdesign">
                 <div class="Portfolio-box branding">
-                    <p><a href="img/textHunterReg1.png"><img src="img/hunterReg1.png" alt="">dfgdfgdf</a></p>
+                    <p><a href="img/textHunterReg1.png"><img src="img/hunterReg1.png" alt=""></a></p>
                     <h3>HNVR-4480HL MHD</h3>
                     <p>HUNTER</p>
                 </div>
@@ -402,14 +407,18 @@
                 <div class="b-popup-content">
                     <a href="javascript:PopUpHide()" class="showPopup" onclick="showNav('nav');"><b>x</b></a>   
                     <div class="okno">
-                        <div class="row">
+                        <div class="row1">
                             <div class="quiz1left">
-                                <div id="q_title">
-                                    Куда требуется видеонаблюдение?
+                                <div id="q_title">Куда требуется видеонаблюдение?
                                 </div>
                                 <!-- Progress bar  -->
-                                <div class="w3-light-grey" id="q_progress_bar">
-                                    <div class="w3-container w3-green w3-center" style="width:10%">1-ый вопрос из 9</div> 
+                                <div id="q_progress_bar" class="pro999">
+                                    <div class="row2">
+                                        <div class="w3-light-grey">
+                                            <div class="w3-container w3-green w3-center" style="width:10%"></div>
+                                        </div>
+                                    </div>
+                                    <div class="textRow2">1-ый вопрос из 9</div>
                                 </div>
                                 <!-- //Progress bar  -->
                                 <div id="q_main_content">
@@ -420,7 +429,7 @@
                                                     <img src="img/quiz/imgQuiz1.png" alt="">
                                                 </div>
                                                 <div class="text-radio1">
-                                                    <input type="radio" class="option-input radio" id="q1" value="home" checked />
+                                                    <input type="radio" class="option-input radio" id="q1" value="home"/>
                                                     Дом
                                                 </div>
                                             </label>
@@ -454,7 +463,7 @@
                                                 </div>
                                                 <div class="text-radio1">
 
-                                                    <input type="radio" class="option-input radio" name="example" />
+                                                    <input type="radio" class="option-input radio" name="example" value="office" />
                                                     Офис
                                                 </div>
                                             </label>
@@ -465,7 +474,7 @@
                                                     <img src="img/quiz/imgQuiz5.png" alt="">
                                                 </div>
                                                 <div class="text-radio1">
-                                                    <input type="radio" class="option-input radio" name="example" />
+                                                    <input type="radio" class="option-input radio" name="example" value="aprt"/>
                                                     Квартира
                                                 </div>
                                             </label>
@@ -476,7 +485,7 @@
                                                     <img src="img/quiz/imgQuiz6.png" alt="">
                                                 </div>
                                                 <div class="text-radio1">
-                                                    <input type="radio" class="option-input radio" name="example" />
+                                                    <input type="radio" class="option-input radio" name="example" value="market"/>
                                                     Магазин
                                                 </div>
                                             </label>
@@ -487,7 +496,7 @@
                                                     <img src="img/quiz/imgQuiz7.png" alt="">
                                                 </div>
                                                 <div class="text-radio1">
-                                                    <input type="radio" class="option-input radio" name="example" />
+                                                    <input type="radio" class="option-input radio" name="example" value="cafe"/>
                                                     Кафе
                                                 </div>
                                             </label>
@@ -498,25 +507,43 @@
                                                     <img src="img/quiz/imgQuiz8.png" alt="">
                                                 </div>
                                                 <div class="text-radio1">
-                                                    <input type="radio" class="option-input radio" name="example" />
+                                                    <input type="radio" class="option-input radio" name="example" value="storage"/>
                                                     Склад
                                                 </div>
                                             </label>
                                         </div>
                                     </div>
                                     <div class="row4">
-                                        <div class="textRow4">
-                                            Ваш вариант
+                                            <label>
+                                        <div class="textRow4">  
+                                                <input type="radio" class="option-input radio" name="example"  value="yourVariant"/>Ваш вариант
                                         </div>
                                         <div class="inputRow4">
                                             <input type="text" id="inputText">
                                         </div>
+                                    </label>
                                     </div>
                                 </div>
-                                <div class="row5" id="q_button"><button onclick="next('question2');" class="input-btn">Далее</button></div>
+                                <div id="q_button">
+                                    <div class="row5" ><button onclick="next('question2');" class="input-btn">Далее</button></div>
+                                </div>
                             </div>
                             <div class="quiz1right" id="q_additional_content">
+                                <div class="right_img">
+                                    <img src="img/q1.1.png" alt=""> 
+                                </div>
+                                <div class="right_text">
+                                    <hr>
                                     В первую очередь важен тип объекта, поэтому для начала выберите куда нужно уствновить систему. Это повысит точность расчета.
+                                </div>
+                                <div class="right_footer">
+                                    <div class="rf_img">
+                                    <img src="img/small-logo2.png" alt=""> 
+                                    </div>
+                                    <div class="rf_text">
+                                    Установка систем безопасности "под ключ"
+                                    </div>
+                                </div>
                             </div> 
                         </div>
                     </div>
@@ -557,7 +584,7 @@
                 <div class="col-lg-6 col-sm-7 wow fadeInLeft">
                     <div class="contact-info-box address clearfix">
                         <h3><i class=" icon-map-marker"></i>Адрес:</h3>
-                        <span>Санкт-Петербург, Россия</span>
+                        <span>Санкт-Петербург, ул. Бадаева 14, к. 4.</span>
                     </div>
                     <div class="contact-info-box phone clearfix">
                         <h3><i class="fa fa-phone"></i>Тел.:</h3>
