--- a/index.html
+++ b/index.html
@@ -424,7 +424,7 @@
                                                     <img src="img/quiz/imgQuiz1.png" alt="">
                                                 </div>
                                                 <div class="text-radio1">
-                                                    <input type="radio" class="option-input radio" id="q1" value="home"/>
+                                                    <input type="radio" class="option-input radio" id="q1" name="example" value="home"/>
                                                     Дом
                                                 </div>
                                             </label>
@@ -511,7 +511,7 @@
                                     <div class="row4">
                                             <label>
                                         <div class="textRow4">  
-                                                <input type="radio" class="option-input radio" name="example"  value="yourVariant"/>Ваш вариант
+                                                <input type="radio" class="option-input radio" name="example"  value="yourVariant"/> Ваш вариант
                                         </div>
                                         <div class="inputRow4">
                                             <input type="text" id="inputText">
@@ -523,23 +523,25 @@
                                     <div class="row5" ><button onclick="next('question2');" class="input-btn">Далее</button></div>
                                 </div>
                             </div>
-                            <div class="quiz1right" id="q_additional_content">
-                                <div class="right_img">
-                                    <img src="img/q1.1.png" alt=""> 
-                                </div>
-                                <div class="right_text">
-                                    <hr>
-                                    В первую очередь важен тип объекта, поэтому для начала выберите куда нужно уствновить систему. Это повысит точность расчета.
-                                </div>
-                                <div class="right_footer">
-                                    <div class="rf_img">
-                                    <img src="img/small-logo2.png" alt=""> 
+                            <div id="q_additional_content">
+                                <div class="quiz1right">
+                                    <div class="right_img">
+                                        <img src="img/q1.1.png" alt=""> 
                                     </div>
-                                    <div class="rf_text">
-                                    Установка систем безопасности "под ключ"
+                                    <div class="right_text">
+                                        <hr>
+                                        В первую очередь важен тип объекта, поэтому для начала выберите куда нужно уствновить систему. Это повысит точность расчета.
                                     </div>
-                                </div>
-                            </div> 
+                                    <div class="right_footer">
+                                        <div class="rf_img">
+                                        <img src="img/small-logo2.png" alt=""> 
+                                        </div>
+                                        <div class="rf_text">
+                                        Установка систем безопасности "под ключ"
+                                        </div>
+                                    </div>
+                                </div> 
+                            </div>
                         </div>
                     </div>
                 </div>
