--- a/index.html
+++ b/index.html
@@ -53,7 +53,8 @@
             <ul class="we-create animated fadeInUp delay-1s">
                 <li>гарантия вашего спокойствия</li>
             </ul>
-            <a class="link animated fadeInUp delay-1s servicelink" href="#service">начать</a>
+            <a class="link animated fadeInUp delay-1s servicelink" href="#service">o нас</a>
+            <a class="link animated fadeInUp delay-1s servicelink" href="javascript:PopUpShow()"  onclick="hideNav('nav');">Расчет стоимости</a>
         </div>
     </header>
     <!--header-end-->
@@ -201,22 +202,26 @@
                 <div class="Portfolio-box branding">
                     <p><a href="img/textHunterReg1.png"><img src="img/hunterReg1.png" alt=""></a></p>
                     <h3>HNVR-4480HL MHD</h3>
-                    <p>HUNTER</p>
+                    <p>HUNTER</p> 
+                    <h3>4650 руб.</h3>
                 </div>
                 <div class="Portfolio-box branding">
                     <a href="img/textHunterReg2.png"><img src="img/hunterReg2.png" alt=""></a>
                     <h3>HNVR-8420HL MHD</h3>
                     <p>HUNTER</p>
+                    <h3>5960 руб.</h3>
                 </div>
                 <div class="Portfolio-box branding">
                     <a href="img/textHunterReg3.png"><img src="img/hunterReg3.png" alt=""></a>
                     <h3>NVR-8120R V3 MHD</h3>
                     <p>HUNTER</p>
+                    <h3>5340 руб.</h3>
                 </div>
                 <div class="Portfolio-box branding">
                     <a href="img/textHunterReg4.png"><img src="img/hunterReg4.png" alt=""></a>
                     <h3>HNVR-4120R MHD</h3>
                     <p>HUNTER</p>
+                    <h3>3900 руб.</h3>
                 </div>
             </div>
 
@@ -225,21 +230,25 @@
                 <a href="img/textHikCam1.png"><img src="img/HikCam1.png" alt=""></a>
                 <h3>DS-2CE56D8T-IT1E HDTVI  2MP</h3>
                 <p>HIKVISION</p>
+                <h3>3900 руб.</h3>
             </div>
             <div class="Portfolio-box webdesign">
                 <a href="img/textHikCam2.png"><img src="img/HikCam2.png" alt=""></a>
                 <h3>DS-2CE56D8T-VPITE  2MP</h3>
                 <p>HIKVISION</p>
+                <h3>3900 руб.</h3>
             </div>
             <div class="Portfolio-box webdesign">
                 <a href="img/textHikCam3.png"><img src="img/HikCam3.png" alt=""></a>
                 <h3>DS-2CE16D8T-ITE HDTVI 2MP</h3>
                 <p>HIKVISION</p>
+                <h3>3900 руб.</h3>
             </div>
             <div class="Portfolio-box webdesign">
                 <a href="img/textHikCam4.png"><img src="img/HikCam4.png" alt=""></a>
                 <h3>DS-2CE16D8T-IT3ZE 2MP</h3>
                 <p>HIKVISION</p>
+                <h3>3900 руб.</h3>
             </div>
 
 
@@ -247,16 +256,19 @@
                 <a href="img/Hunter1.png"><img src="img/Portfolio1-cam1.png" alt=""></a>
                 <h3>HN-VD323IR MHD 2MP</h3>
                 <p>HUNTER</p>
+                <h3>3900 руб.</h3>
             </div>
             <div class=" Portfolio-box branding">
                 <a href="img/textHunterCam2.png"><img src="img/HunterCam2.png" alt=""></a>
                 <h3>HN-MVD2710IR MHD 2MP</h3>
                 <p>HUNTER</p>
+                <h3>3900 руб.</h3>
             </div>
             <div class=" Portfolio-box branding">
                 <a href="img/textHunterCam3.png"><img src="img/HunterCam3.png" alt=""></a>
                 <h3>HN-VD4624IR (3.6) AHD 4MP</h3>
                 <p>HUNTER</p>
+                <h3>3900 руб.</h3>
             </div>
             <div class=" Portfolio-box branding">
                 <a href="img/textHunterCam4.png"><img src="img/HunterCam4.png" alt=""></a>
@@ -267,22 +279,26 @@
                 <a href="img/textHunterCam5.png"><img src="img/HunterCam5.png" alt=""></a>
                 <h3>HN-B0330VFIRH-60 MHD 3MP</h3>
                 <p>HUNTER</p>
+                <h3>3900 руб.</h3>
             </div>
             <div class=" Portfolio-box branding">
                 <a href="img/textHunterCam6.png"><img src="img/HunterCam6.png" alt=""></a>
                 <h3>HN-B4624IR (3.6) AHD 4MP</h3>
                 <p>HUNTER</p>
+                <h3>3900 руб.</h3>
             </div>
 
             <div class=" Portfolio-box photography">
                 <a href="img/textHikReg1.png"><img src="img/hikReg1.png" alt=""></a>
                 <h3>DS-7204HQHI-K1 HD-TVI</h3>
                 <p>HIKVISION</p>
+                <h3>3900 руб.</h3>
             </div>
             <div class=" Portfolio-box photography">
                 <a href="img/textHikReg2.png"><img src="img/hikReg2.png" alt=""></a>
                 <h3>DS-7208HQHI-K2/P HD-TVI</h3>
                 <p>HIKVISION</p>
+                <h3>3900 руб.</h3> 
             </div>
         </div>
     </section>
@@ -394,8 +410,6 @@
                 <div id="stoimost"></div>
                 <div style="display:none" id="button2"><a class="link animated fadeInUp delay-1s servicelink buttonCool" href="#team">Посмотреть смету</a></div>
             </div>
-                    <a href="javascript:PopUpShow()"  onclick="hideNav('nav');">Расчет стоимости</a>
-
         </div> 
         <div class="b-container">
             <div class="b-popup" id="popup1">
@@ -520,7 +534,7 @@
                                     </div>
                                 </div>
                                 <div id="q_button">
-                                    <div class="row5" ><button onclick="next('question2');" class="input-btn">Далее</button></div>
+                                    <div class="row5" ><button onclick="next('question2','forward');" class="input-btn">Далее</button></div>
                                 </div>
                             </div>
                             <div id="q_additional_content">
@@ -530,15 +544,7 @@
                                     </div>
                                     <div class="right_text">
                                         <hr>
-                                        В первую очередь важен тип объекта, поэтому для начала выберите куда нужно уствновить систему. Это повысит точность расчета.
-                                    </div>
-                                    <div class="right_footer">
-                                        <div class="rf_img">
-                                        <img src="img/small-logo2.png" alt=""> 
-                                        </div>
-                                        <div class="rf_text">
-                                        Установка систем безопасности "под ключ"
-                                        </div>
+                                        В первую очередь важен тип объекта, поэтому для начала выберите куда нужно установить систему. Это повысит точность расчета.
                                     </div>
                                 </div> 
                             </div>
